Fixed header on mobile

--- a/style.css
+++ b/style.css
@@ -86,6 +86,12 @@ figure.execs figcaption {
   margin-top: 0;
 }
 
+@media screen and (max-width: 430px) {
+  figure.execs figcaption {
+    font-size: 3.35rem;
+  }
+}
+
 footer {
   margin: 4rem 0;
 }
